refactor(repository): otimiza ExpenseMemoryRepository com LinkedHashMap