@@ -3,14 +3,11 @@ package br.com.gaalv.todo.repository.impl;
 import br.com.gaalv.todo.model.Expense;
 import br.com.gaalv.todo.repository.ExpenseRepository;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
 public class ExpenseMemoryRepository implements ExpenseRepository {
 
-    private final List<Expense> expensesList = new ArrayList<>();
+    private final Map<Long, Expense> expensesMap = new LinkedHashMap<>();
     private long contId = 1;
 
 
@@ -18,39 +15,25 @@ public class ExpenseMemoryRepository implements ExpenseRepository {
     public void saveExpense(Expense expense) {
 
         if(expense.getId() == null) {
-
             expense.setId(contId++);
-            expensesList.add(expense);
+            expensesMap.put(expense.getId(), expense);
         } else {
-
             updateExpense(expense);
         }
     }
 
     @Override
-    public boolean deleteExpense(Expense expense) {return  expensesList.removeIf(e -> e.getId().equals(expense.getId()));}
+    public boolean deleteExpense(Expense expense) {return expensesMap.remove(expense.getId()) != null;}
 
     @Override
-    public void updateExpense(Expense expense) {
-
-        searchById(expense.getId()).ifPresent(oldExpense -> {
-
-            int index = expensesList.indexOf(oldExpense);
-            expensesList.set(index, expense);
-        });
-}
+    public void updateExpense(Expense expense) {expensesMap.replace(expense.getId(), expense);}
 
     @Override
-    public List<Expense> readExpense() {return Collections.unmodifiableList(expensesList);}
+    public List<Expense> findAll() {return List.copyOf(expensesMap.values());}
 
     @Override
-    public int total() {return expensesList.size();}
+    public int total() {return expensesMap.size();}
 
     @Override
-    public Optional<Expense> searchById(long id) {
-
-        return expensesList.stream()
-                .filter(e -> e.getId().equals(id))
-                .findFirst();
-    }
+    public Optional<Expense> findById(long id) {return Optional.ofNullable(expensesMap.get(id));}
 }
